--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.1.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mocha": "^10.2.0",
     "morgan": "~1.9.1",
+    "pg": "^8.11.0",
+    "pug": "^3.0.2",
     "sequelize": "^6.32.0"
   }
 }
