--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.3",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mocha": "^10.2.0",
     "morgan": "~1.9.1",
     "pg": "^8.11.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "string-crypto": "^2.0.2"
   }
 }
