--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "flyctl deploy"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
