--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.3",
